--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,16 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - Stripe:SecretKey=sk_test_51R4lGgGhwwhJnKLebvx5CTG8q5hEDwMQJso52fyaaOMAYZeRQJrzZISUMhVBjt3fuSNRrr05DJ1yyNNfKedmXdf7006FNjr4J3
-      - Stripe:PublisheableKey=pk_test_51R4lGgGhwwhJnKLeWrFqJMDKY6dz7ZvCA0V3TE2c48a1HtVngNdtCAzJNoPEBlGaTJdlGvyzcDx8GRtul8kPKCsx00mct5ucDv
+      - Stripe:SecretKey=
+      - Stripe:PublisheableKey=
       
-      - Twilio:AccountSid=AC3fe4968eb9794f57eaeb88e7455f929d
-      - Twilio:AuthToken=e42db29421a1644bcf385b5c09f07773
-      - Twilio:PhoneNumber=+12705143487
-      - ConnectionStrings:DefaultConnection=Host=db;Database=tbcpay_db;Username=postgres;Password=Ss@598282954;
-      - Jwt:Secret=kJ9#mP2$vL8@xQ5!wE3&zR6*yT1-uB4!
-      - Google:ClientId=1065271937286-imp6jj5m0eocvsbkeb05qbmal1bv2k3m.apps.googleusercontent.com
-      - Google:ClientSecret=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
+      - Twilio:AccountSid=
+      - Twilio:AuthToken=
+      - Twilio:PhoneNumber=
+      - ConnectionStrings:DefaultConnection=Host=db;Database=tbcpay_db;Username=postgres;Password=;
+      - Jwt:Secret=
+      - Google:ClientId=
+      - Google:ClientSecret=
     depends_on:
       - db
     networks:
@@ -26,7 +26,7 @@ services:
     environment:
       - POSTGRES_DB=tbcpay_db
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=Ss@598282954
+      - POSTGRES_PASSWORD=
     volumes:
       - db-data:/var/lib/postgresql/data
     ports:
